Add support for site with translations
This kind of hackily supports translations for footer_links/tagline.
An example of how that might look when you've got english and russian
translations:

[extra]
[extra.footer_tagline]
en = "English tagline"
ru = "Russian tagline"

[extra.footer_links]
en = [{url = "$BASE_URL/about", name = "English about"}]
ru = [{url = "$BASE_URL/about", name = "Russian about"}]

If this isn't needed the old way that the readme describes still works,
then the same values are use independently of the language on the rest
of the page. The $BASE_URL in the links above will change depending on
the current language.

The 'title' and 'description' items should be placed in [translations]
and [languages.XX] as described by the Zola guide.

--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,13 @@
 {% extends "index.html" %}
 
-{% block title %}{{ page.title }} &middot; {{ config.title }}{% endblock title %}
-{% block description %}{{ page.description | default(value=config.description) }}{% endblock description %}
+{% block title %}{{ page.title }} &middot; {{ trans(key="title", lang=lang) }}{% endblock title %}
+{% block description %}
+{% if page.description %}
+  {{ page.description }}
+{% else %}
+  {{ trans(key="description", lang=lang) }}
+{% endif %}
+{% endblock description %}
 
 {% block ogtitle %}{{ page.title }}{% endblock ogtitle %}
 {% block ogdesc %}{{ page.description }}{% endblock ogdesc %}
